VDYP-167 clean up.